--- a/styles.css
+++ b/styles.css
@@ -89,7 +89,7 @@ img {
     background: #888;
     height: 100%;
     padding-right: 0.4vw;
-    font-size: 0.75em;
+    font-size: 0.6vw;
     position: absolute;
     top: 0;
     left: 0;
